# pyright-marshmallow-all

./: README.md  pyproject.toml
src/: __init__.py
typings/marshmallow/: schema.pyi
